deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: belegapp
spec:
  selector:
    app: belegapp
  ports:
    - name: http
      port: 8080
      targetPort: http
